fix: Schonni -> Schonning

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5049,7 +5049,7 @@
     			<li>Jonathan Neal</li>
     			<li>Philipp Rudloff</li>
     			<li>Joseph Scheuhammer</li>
-    			<li>Nick Schonni</li>
+    			<li>Nick Schonning</li>
     			<li>thomascorthals</li>
     			<li>Christopher Tryens</li>
     		</ul>
