fixed bug with document click event for dialog

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -59,7 +59,7 @@
           <input type="text"
                 placeholder="mm/dd/yyyy"
                 id="id-date-1"
-                aria-expanded="false"
+                aria-autocomplete="none"
                 aria-controls="id-datepicker-1">
           <span class="downarrow"></span>
           <button class="icon"
