--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -6,13 +6,13 @@
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
-    <link rel="stylesheet" href="../../css/core.css">
-    <script src="../../js/examples.js"></script>
-    <script src="../../js/highlight.pack.js"></script>
-    <script src="../../js/app.js"></script>
+    <link rel="stylesheet" href="../css/core.css">
+    <script src="../js/examples.js"></script>
+    <script src="../js/highlight.pack.js"></script>
+    <script src="../js/app.js"></script>
 
     <!--  js and css for this example. -->
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="css/carousel-1.css">
     <script src="js/carousel.js" type="text/javascript"></script>
     <script src="js/carouselItem.js" type="text/javascript"></script>
     <script src="js/carouselButtons.js" type="text/javascript"></script>
@@ -22,10 +22,10 @@
   <body>
     <nav aria-label="Related Links" class="feedback">
       <ul>
-        <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+        <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
         <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
         <li><a href="https://github.com/w3c/aria-practices/projects/10">Related Issues</a></li>
-        <li><a href="../../../#carousel">Design Pattern</a></li>
+        <li><a href="../../#carousel">Design Pattern</a></li>
       </ul>
     </nav>
     <main>
@@ -51,54 +51,45 @@
 
               <div class="carousel-inner">
 
-                <button class="carousel-pause" aria-label="pause">
-                  <svg width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <div class="controls">
 
-                    <circle class="outer" cx="30" cy="30" r="28" stroke-width="1" stroke="black"/>
+                  <button class="rotation pause" aria-label="Stop automatic slide show">
+                    <svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                      <rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"/>
+                      <rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"/>
 
-                    <circle class="inner" cx="30" cy="30" r="25" stroke-width="4"/>
+                      <polygon class="pause" points="17 8 17 20"/>
 
-                    <polygon class="pause" points="23 18 23 40"
-                        stroke="white" fill="white" stroke-width="8" />
+                      <polygon class="pause" points="24 8 24 20"/>
 
-                    <polygon class="pause" points="37 18 37 40"
-                        stroke="white" fill="white" stroke-width="8" />
+                      <polygon class="play" points="15 8 15 20 27 14" />
 
-                    <polygon class="play" points="22 20 22 40 43 28"
-                        stroke="transparent" fill="transparent" stroke-width="2" />
-
-                    <polygon class="disabled" points="15 15 19 15 45 45 42 45"
-                        stroke="transparent" fill="trasparent" stroke-width="1" />
-
-                    <polygon class="disabled" points="45 15 42 15 19 45 15 45"
-                        stroke="transparent" fill="trasparent" stroke-width="1" />
-
-                  </svg>
-                </button>
+                    </svg>
+                  </button>
 
 
-                <button class="previous carousel-control"
-                   aria-controls="myCarousel-items"
-                   aria-label="Previous Slide">
-                  <svg width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <circle class="outer" cx="30" cy="30" r="28" stroke-width="1" stroke="#005a9c"/>
-                    <circle class="inner" cx="30" cy="30" r="25" stroke="white" stroke-width="4" fill="black"/>
-                    <polygon points="40 18 40 42 15 30"
-                        stroke="white" fill="white" stroke-width="2"/>
-                  </svg>
-                </button>
+                  <button class="previous"
+                     aria-controls="myCarousel-items"
+                     aria-label="Previous Slide">
+                    <svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                      <rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"/>
+                      <rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"/>
+                      <polygon points="9 14 21 8 21 11 33 11 33 17 21 17 21 20" />
+                    </svg>
+                  </button>
 
-                <button class="next carousel-control"
-                   tabindex="0"
-                   aria-controls="myCarousel-items"
-                   aria-label="Next Slide">
-                  <svg width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <circle class="outer" cx="30" cy="30" r="28" stroke-width="1" stroke="#005a9c"/>
-                    <circle class="inner" cx="30" cy="30" r="25" stroke="white" stroke-width="4" fill="black"/>
-                    <polygon points="20 18 20 42 45 30"
-                        stroke="white" fill="white" stroke-width="2"/>
-                  </svg>
-                </button>
+                  <button class="next"
+                     aria-controls="myCarousel-items"
+                     aria-label="Next Slide">
+                    <svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                      <rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"/>
+                      <rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"/>
+                      <polygon points="9 11 21 11 21 8 33 14 21 20 21 17 9 17" />
+                    </svg>
+                  </button>
+
+                </div>
+
 
                 <div id="myCarousel-items" class="carousel-items" aria-live="off">
 
@@ -511,7 +502,7 @@
       <section>
         <h2>Javascript and CSS Source Code</h2>
         <ul>
-          <li>CSS: <a href="css/carousel.css" type="text/css">carousel.css</a></li>
+          <li>CSS: <a href="css/carousel-1.css" type="text/css">carousel-1.css</a></li>
           <li>Javascript: <a href="js/carousel.js" type="text/javascript">carousel.js</a></li>
           <li>Javascript: <a href="js/carouselItem.js" type="text/javascript">carouselItem.js</a></li>
           <li>Javascript: <a href="js/carouselButtons.js" type="text/javascript">carouselButtons.js</a></li>
