lint testing and one typo fix

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3707,7 +3707,7 @@
     </p>
     <ul>
       <li>Naming with child content.</li>
-      <li>Naming with a String Attribute Via <code>aria-label</code>.</li>
+      <li>Naming with a String Attribute Via <code>aria-lable</code>.</li>
       <li>Naming by Referencing Content with <code>aria-labelledby</code>.</li>
       <li>Naming by encapsulation with a label.</li>
       <li>Naming with Legends and Captions.</li>
