--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3707,7 +3707,7 @@
     </p>
     <ul>
       <li>Naming with child content.</li>
-      <li>Naming with a String Attribute Via <code>aria-lable</code>.</li>
+      <li>Naming with a String Attribute Via <code>aria-label</code>.</li>
       <li>Naming by Referencing Content with <code>aria-labelledby</code>.</li>
       <li>Naming by encapsulation with a label.</li>
       <li>Naming with Legends and Captions.</li>
@@ -3880,7 +3880,7 @@ However, most authors do not need detailed understanding of the algorithms since
         </li>
         <li>There are certain types of elements, such as paragraphs and list items, that should not be named with <code>aria-label</code>. They are identified in the table in section <a href="#naming_role_guidance">Accessible Name Guidance by Role</a>.</li>
             <li>Because the value of <code>aria-label</code> is not rendered visually, testing with assistive technologies to ensure the expected name is presented to users is particularly important.</li>
-            <li>When a user interface is translated into multiple languages, ensure that <code>aria-lable</code> values are translated.</li>
+            <li>When a user interface is translated into multiple languages, ensure that <code>aria-label</code> values are translated.</li>
           </ol>
         </section>
 
