recover the memory of APG example set up

--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -2,20 +2,8 @@
 <html lang="en">
   <head>
     <title>Meter Blueprint</title>
-    <style>
-      [role=meter] {
-        position: relative;
-        border: 4px solid black;
-        height: 20px;
-        width: 200px;
-      }
-
-      #fill {
-        position: absolute;
-        height: 100%;
-        background-color: black;
-      }
-    </style>
+    <!-- CSS and JS for this example. -->
+    <link rel="stylesheet" href="css/meter.css">
     <script>
       /** @type {!Element} Meter element. */
       let meterEl;
